--- a/package.json
+++ b/package.json
@@ -18,5 +18,8 @@
   "version": "0.1.0",
   "devDependencies": {
     "webpack-dev-server": "^3"
+  },
+  "scripts": {
+    "heroku-postbuild": "webpack --mode production"
   }
 }
