--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "fswd-chatroom",
   "private": true,
   "engines": {
-    "node": "^16.17"
+    "node": "16.17.x"
   },
   "dependencies": {
     "@rails/actioncable": "^6.0.0",
