--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "name": "fswd-chatroom",
   "private": true,
   "engines": {
-    "node": "16.17.x"
+    "node": "16.17.x",
+    "yarn": "1.22.x"
   },
   "dependencies": {
     "@rails/actioncable": "^6.0.0",
